# HorizonPair

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TRFXSample2.txt  clean.sh  colour.py  compile.sh  match.py  player.py  pyproject.toml  run__main__.sh
HorizonPair.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: 20220823-tournamentName.ctr  20220823-tournamentName.tms
horizonpair/: HorizonPair.py  __main__.py  exceptions.py  match.py  player.py  result.py  round.py  tournament.py
horizonpair/app/: application.py  exceptions.py
horizonpair/cfc/: __init__.py  id.py
horizonpair/cfc/ctr/: make.py
horizonpair/chess/: __init__.py  colour.py  match.py  player.py  result.py
horizonpair/ctr/: ctr_report.txt
horizonpair/gui/: HorizonPair.py  __init__.py  add_player_frame.py  create_tournament_frame.py  hs_mainwindow.py  main_window.py  sillylearning.py  styles.py  view_tournament_frame.py  welcome_frame.py
horizonpair/gui/frame/: __init__.py  add_player_frame.py  create_tournament_frame.py  select_tournament_frame.py  view_tournament_frame.py  welcome_frame.py
horizonpair/gui/widget/: __init__.py  match_widget.py  player_widget.py  roster_widget.py  tournament_widget.py
horizonpair/gui/widgets/: match_widget.py
horizonpair/test/: __main__.py  ctr_generator.py  data.py  horizonpair_test.py  random_pairing_tournament_test.py  tk_util.py  widget_display_test.py
horizonpair/test/util/: random_tournament_generator.py
horizonpair/tournament/: __init__.py  roster.py  round.py  tournament.py
horizonpair/tournament/pairing_system/: swiss.py
horizonpair/tournament/pairing_systems/: __init__.py  double_round_robin.py  random.py  round_robin.py  swiss.py  system.py
horizonswiss/app/: __main__.py
horizonswiss/gui/: view_tournament_frame.py  welcome_frame.py
horizonswiss/gui/widget/: __init__.py  roster_widget.py  tournament_widget.py
pythonpair/: pyproject.toml
pythonpair/src/: HorizonPair.py  bracket.py  colour.py  gui.qml  player.py  roundResult.py  swissTypes.py
scalapair/: build.sbt
scalapair/src/main/scala/: Main.scala
src/: CMakeLists.txt  HorizonPair.py  bracket.py  main.cpp  match.py  roundResult.py  scoreGroup.py  swissTypes.py
test/: HP_test.py  horizonpair  horizonpair_test.py  random_pairing_tournament_test.py
