#    HorizonPair: a program for assisting in creating and running chess tournaments
#    Copyright (C) 2024 Nicolas Vaagen
#
#    This program is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with this program.  If not, see <https://www.gnu.org/licenses/>.
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name="HorizonPair"
version="0.0.2"
authors=[
    { name = "Nicolas Vaagen", email="nicolasvaagen@gmail.com" }
]
maintainers= [
    { name = "Nicolas Vaagen", email="nicolasvaagen@gmail.com" }
]
description='HorizonPair, a chess tournament pairing manager.'
keywords=["CFC", "pairing"]
classifiers= [
    "Development Status :: ongoing",
    "Intended Audience :: Chess Tournoment hosters",
    "Programming language :: Python :: 3.12+",
    "Operating System :: POSIX :: GNU/Linux",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: chess"
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Repository = 'https://github.com/nicvagn/HorizonPair'
issues = 'https://github.com/nicvagn/HorizonPair/issues'

[tool.setuptools.packages]
find = {} # defaults

